SPRING MODULES CHANGELOG
========================
http://springmodules.dev.java.net

Changes in version 0.9 (in progress)
------------------------------------

Package org.springmodules.cache
* upgraded JCS library to 1.3
* upgraded GigaSpaces library to 5.2-1706
* upgraded Spring library to 2.0.5
* upgraded XStream library to 1.2.2
* added support for Tangosol Coherence (again), thanks to Andy Nguyen for providing Tangosol mock jar: MOD-188
* AbstractCachingInterceptor no longer logs exceptions thrown by advised methods as errors, log a debug message instead: MOD-289

Package org.springmodules.validation
* Added validation context support documentation
* Added ValidationRef annotation and xml element support for referencing Validator beans in app context
* Added ConditionRef annotation and xml element support for referencing Condition beans in app context
* Added BeanValidator#setShortCircuitFieldValidation(boolean) to enable/disable short-circuite validation process
* Updated documentation to reflect the new features
* Resolved issues: MOD-346, MOD-345

Package org.springmodules.lucene
* Added new support of resource management to remain opened resources during
  the manipulation of the index
* Added support of PdfBox to index pdf files
* Added support of transaction to index documents
* Resolved issues: MOD-161, MOD-355
* Added custom namespace to configure Lucene resources of the support
* Added concurrency support using lock
* Updated index template to support resource management and transaction support

Package org.springmodules.orm.orbroker
* upgraded O/RBroker library to 2.0.3
* added support for configuring BrokerFactoryBean without config file (mainly for testing)

Changes in version 0.8 (2007.03.11)
-----------------------------------

Package org.springmodules.db4o
* new db4o integration module (former db4o-spring.dev.java.net project)
* added new setters for Configuration properties available in 6.1 and removed the deprecated ones